Fixed issue with console overflow

--- a/2PP Net/styles.css
+++ b/2PP Net/styles.css
@@ -59,6 +59,7 @@ object {
   background-color:black;
   width:100%;
   height:40em;
+  overflow: scroll;
 }
 
 b.code *{
